--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">BTM Layout 2nd Stage Bangalore,Karnataka</div>
+              <div class="col-sm-8">BTM Layout 1st Stage Bangalore,Karnataka</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8">English, Kanadda, Hindi</div>
+              <div class="col-sm-8">English, Kannada, Hindi</div>
             </div>
           </div>
         </div>
